@@ -110,12 +110,11 @@ It also assumes that a bad password is signaled by a PAM_ERROR_MSG
 following initial entry of the new password.
 .SH AUTHOR
 .nf
-Chip Rosenthal
-Unicom Systems Development
-<chip@unicom.com>
-
 This file is part of the "web-chpass" package.
 See <https://github.com/chip-rosenthal/web-chpass> for more information.
+
+Chip Rosenthal
+<chip@unicom.com>
 .fi
 .SH SEE ALSO
 pam(8), passwd(1)
