@@ -1,3 +1,14 @@
+Fri Mar  4 10:21:55 CST 2016
+
+        Renamed configuration setting BADPW_CHECKS to ENABLE_BADPW_CHECK
+        and made value 1/0 boolean.
+
+        Changed FORCE_HTTPS value to 1/0 boolean.
+
+        Converted INSTALL to INSTALL.md
+
+        Normalized file headers.
+
 Thu Mar  3 10:37:58 CST 2016
 
 	Added FORCE_HTTPS configuration setting to force application
